# my_fhe_library

./: ACADEMIC_EXPLANATION_MULTIPLICATION.md  BUILD_INSTRUCTIONS.md  GETTING_STARTED.md  INSTALLATION_GUIDE.md  KAGGLE_SETUP.md  QUICK_REFERENCE.md  README.md  README_ACCELERATED.md  WHY_MULTIPLICATION_IS_HARD.md  bfv_mult.h  bfv_scheme.py  bindings.cpp  ciphertext.py  setup.py
files (1)/: QUICKSTART.md
files (1)/complete_fhe_package/: FINAL_SUMMARY.md  PROJECT_SUMMARY.md  example_accelerated.py  fhe_custom_exact_match.py  setup_cpp.py  test_accelerated.py  test_custom_fhe.py
files (1)/complete_fhe_package/custom_fhe/: __init__.py  bfv_accelerated.py  keys.py  polynomial.py
files (1)/complete_fhe_package/fhe_cpp/: CMakeLists.txt  bfv_mult.cpp  ntt.cpp  ntt.h
